--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -115,6 +115,11 @@ a {
   color: #159957; }
 .main-content p {
   margin-bottom: 1em; }
+.main-content .comment {
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, KaiTi, STKaiti, "Microsoft YaHei", "微软雅黑", STXihei, "华文细黑";
+  font-size: 0.8rem;
+  color: #383e41;
+}
 .main-content code {
   padding: 2px 4px;
   font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace, "Microsoft YaHei", "微软雅黑", STXihei, "华文细黑";
